my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_12/ESYNTAX_12.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_12.dml:10:16: error ESYNTAX: syntax error at '"foobar"': not one of "big-endian" or "little-endian"
